# telegram-shell

./: .env.example  .gitignore  README.md  command_registry.py  config.yaml  formatter.py  logger.py  main.py  pyproject.toml  shell_session.py
docs/: architecture.md  config.md
tests/: test_auth.py  test_bot.py  test_command_registry.py  test_coordinator.py  test_shell_session.py
